# Tarang

./: .gitignore  Agent.md  README.md
Plans/: data_flow_explained.md  object_storage.md  structre.md
apps/api/: README.md  main.py  pyproject.toml
apps/api/app/: config.py  database.py  dependencies.py  main.py  middleware.py
apps/api/app/models/: __init__.py  credit.py  history.py  premium_user.py  project.py  user.py  voice.py
apps/api/app/routers/: __init__.py  health.py  history.py  voices.py  webhooks.py
apps/api/app/schemas/: __init__.py  history.py  user.py  voice.py
apps/api/app/services/: __init__.py  storage.py
apps/api/app/utils/: __init__.py  auth.py
apps/app/: package-lock.json  package.json
apps/app/src/app/: globals.css  layout.tsx
apps/app/src/app/(dashboard)/: layout.tsx  page.tsx
apps/app/src/components/layout/: Sidebar.tsx
apps/app/src/lib/: api.ts
apps/app/src/stores/: voiceCloneStore.ts
apps/home/: .env.local.example  .gitignore  components.json  next.config.ts  package-lock.json  package.json
apps/home/src/: index.css
apps/home/src/app/: layout.tsx  page.tsx
apps/home/src/components/Background/: Background.module.css  Background.tsx
apps/home/src/components/DecryptedText/: DecryptedText.tsx
apps/home/src/components/Header/: Header.module.css  Header.tsx
apps/home/src/components/Hero/: Hero.module.css  Hero.tsx
apps/home/src/components/Navbar/: Navbar.module.css  Navbar.tsx
apps/home/src/components/ReactBits/: DarkVeil.tsx  DecryptedText.tsx  Ribbons.tsx
apps/home/src/components/ShinyText/: ShinyText.css  (+1 more)
(+3 files in other folders)
