[project]
name = "tarangbackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "boto3>=1.42.89",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "fastapi[standard]>=0.135.2",
    "httpx>=0.28.1",
    "imagekitio>=5.2.0",
    "modal>=1.4.1",
    "psycopg2-binary>=2.9.11",
    "psycopg2>=2.9.11",
    "pyjwt[crypto]>=2.12.1",
    "python-dotenv>=1.2.2",
    "replicate>=1.0.7",
    "sqlalchemy[asyncio]>=2.0.48",
    "svix>=1.90.0",
    "uvicorn[standard]>=0.42.0",
]
